apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")
# =====================================================================
# APT source URIs. Match sonic_rules/MODULE.bazel's snapshot pin.
#
# All workspace modules (sonic_rules + every src/*/MODULE.bazel + this
# module) now register the same snapshot.debian.org URIs for the trixie
# suites, so rules_distroless's last-writer-wins `lock.sources[suite]`
# resolves deterministically to the snapshot mirror. That mirror retains
# every historical .deb, so `_discover_so_targets_for_package`'s
# synchronous download at analysis time is stable — no 404s from live
# mirrors that have since evicted the pinned versions.
# =====================================================================
apt.sources_list(
    architectures = ["amd64", "arm64"],
    components = ["main"],
    suites = [
        "trixie",
        "trixie-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20260409T202916Z"],
)
apt.sources_list(
    architectures = ["amd64", "arm64"],
    components = ["main"],
    suites = ["trixie-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20260409T182303Z"],
)
apt.install(
    dependency_set = "trixie",
    packages = [
        # do not sort
        # -------- base rootfs closure --------
        "base-files",
        "base-passwd",
        "ca-certificates",
        "libc6",
        "libc-bin",
        # trixie ships the 64-bit time_t (t64) variants of many libs
        "libssl3t64",
        "netbase",
        "openssl",
        "tzdata",
        "media-types",
        "gcc-14-base",
        "libgcc-s1",
        "libstdc++6",

        # -------- coreutils / shell --------
        "bash",
        "coreutils",
        "dash",
        "debianutils",
        "diffutils",
        "findutils",
        "grep",
        "gzip",
        "hostname",
        "mount",
        "ncurses-base",
        "ncurses-bin",
        "sed",
        "util-linux",
        # bsdutils provides /usr/bin/logger (used by 17 SONiC startup scripts
        # to write to syslog). Make ships it in the base image.
        "bsdutils",
        "login",
        "sysvinit-utils",

        # -------- Dockerfile.j2 explicit apt -y install list --------
        "curl",
        "less",
        "perl",
        "procps",
        "python3",
        "python3-pip",
        "python3-setuptools",
        "python3-wheel",
        "python-is-python3",
        "vim-tiny",
        "rsyslog",
        "rsyslog-relp",
        "rsync",
        "redis-tools",
        "libdaemon0",
        "libdbus-1-3",
        "libjansson4",
        "net-tools",
        "jq",
        "libzmq5",
        "libwrap0",
        "libatomic1",
        "libbpf1",
        "libmnl0",
        # Runtime deps of iproute2's ss / tc tools (present in the base rootfs):
        # ss links libtirpc3t64 (libtirpc.so.3), tc links libxtables12
        # (libxtables.so.12). Bazel doesn't auto-resolve deb Depends, so without
        # these `ss` / `tc` fail to load. Grouped with libbpf1/libmnl0 (also
        # iproute2 transitives).
        "libtirpc3t64",
        "libxtables12",
        # libseccomp.so.2 — runtime lib present in Make's base image (used by
        # systemd/util-linux etc.). Bazel doesn't auto-resolve deb Depends.
        "libseccomp2",
        # apt main program + its libs (libapt-pkg.so.7.0 / libapt-private.so.0.0).
        # Make's BASE image already ships apt + these libs; config-engine only
        # adds apt-utils (apt-ftparchive/apt-sortpkgs). Previously mis-added to
        # config-engine; moved here to match Make's layering (base has apt).
        "libapt-pkg7.0",
        "apt",
        # libcap2-bin — provides capsh / getcap / getpcaps / setcap under
        # /usr/sbin. Make's base image inherits these from the debian:trixie
        # base rootfs (Dockerfile.j2 `FROM debian:trixie`); Bazel builds the
        # rootfs from scratch and doesn't auto-resolve deb Depends, so it is
        # declared explicitly to match Make's base layer.
        "libcap2-bin",

        # -------- known transitives to explicitly register --------
        "libpython3-stdlib",
        "libpython3.13-stdlib",
        "libpython3.13-minimal",
        "python3.13",
        "python3.13-minimal",
        "python3-minimal",
        "libgmp10",
        "libpcre2-8-0",

        # -------- docker-config-engine-trixie runtime apt deps --------
        # From docker-config-engine-trixie/Dockerfile.j2's `apt install`. Only
        # the runtime survivors are listed here — build-essential and
        # python3-dev are apt-purged at the end of that Dockerfile, so they are
        # build-only and not shipped. The @trixie apt pool is shared across all
        # trixie dockers, so these live here rather than in a per-docker pool.
        "apt-utils",
        # apt-utils ships apt-ftparchive / apt-sortpkgs, which link
        # libapt-pkg.so.7.0 / libapt-private.so.0.0 — those libs (and the apt
        # main program) are declared in the base rootfs block above (Make ships
        # apt in base), so config-engine only adds apt-utils here.
        "python3-cffi",
        # python3-cffi is pure-Python and Depends on python3-cffi-backend for the
        # _cffi_backend C extension. Bazel does not auto-resolve deb Depends, so
        # it must be listed explicitly; without it the libyang python bindings
        # (and any cffi user) fail with "ModuleNotFoundError: No module named
        # '_cffi_backend'".
        "python3-cffi-backend",
        # python3-pycparser: cffi imports pycparser at runtime (parses C decls);
        # python3-ply: pyangbind imports ply (Lex-Yacc for YANG). Both are in
        # Make's config-engine layer; Bazel doesn't auto-resolve these deps.
        "python3-pycparser",
        "python3-ply",
        "python3-redis",
        "python3-yaml",
        # libyaml-0.so.2 — the C YAML library that python3-yaml (PyYAML's C
        # extension) links against. Make ships it in config-engine.
        "libyaml-0-2",
        # libpython3.13.so.1.0 (+ .so.1 symlink) — the embeddable Python shared
        # library. Make ships it in config-engine via the libpython3.13 package.
        # libpython3.13-minimal/-stdlib (already present) do NOT include this .so.
        "libpython3.13",
        # Runtime dependencies of libswsscommon (sonic-swss-common/BUILD:245-256
        # `Depends:`). Under Make/apt these are auto-pulled by libswsscommon's
        # Depends, but Bazel image assembly does not resolve deb Depends, so the
        # whole closure must be listed explicitly. Without them `sonic-cfggen`
        # (imports swsscommon) fails at runtime with
        # "lib<x>.so: cannot open shared object file", which breaks the
        # entrypoint of every config-engine-based container (they all run
        # sonic-cfggen at startup). These are the Debian apt libs in that
        # closure; the libnl-3-200/nf/route deps are sonic-built and added in
        # config-engine's sonic_pkgs (from @libnl3). libpcre2-8-0 is already
        # provided by the base rootfs above; pcre2's 16/32/posix variants are
        # separate packages that swsscommon also links.
        "libboost-serialization1.83.0",
        "libhiredis1.1.0",
        "libpcre2-16-0",
        "libpcre2-32-0",
        "libpcre2-posix3",
        # Runtime dependency of sonic-eventd (sonic-eventd/BUILD:198
        # `Depends: liblua5.1-0`), installed by config-engine. eventd / eventdb /
        # events_tool link liblua5.1.so.0. Bazel doesn't auto-resolve deb
        # Depends, so list it explicitly; without it those binaries fail to load.
        "liblua5.1-0",

        # -------- docker-swss-layer-trixie runtime apt deps --------
        # iputils-ping: docker-swss-layer-trixie/Dockerfile.j2 `apt install -y
        # iputils-ping`. libyaml-cpp0.8: orchagent links libyaml-cpp.so.0.8.
        # libprotobuf32t64 is kept declared in the pool (harmless; a pool entry
        # only ships when referenced) but swss-layer NO LONGER ships it: the
        # SONiC C++ stack (orchagent/libdashapi) links the sonic-built
        # libprotobuf.so.29, not apt's libprotobuf.so.32 — see
        # docker-swss-layer-trixie/BUILD.bazel. All live in the shared @trixie pool.
        "iputils-ping",
        "libyaml-cpp0.8",
        "libprotobuf32t64",

        # -------- docker-platform-monitor runtime apt deps --------
        # From docker-platform-monitor/Dockerfile.j2's `apt install`. Runtime
        # survivors only — build-essential, python3-dev, librrd-dev are apt-purged
        # (or build-only) and not shipped. Shared @trixie pool, same as the
        # config-engine block above. vs son624 bookworm: librrd8 -> librrd8t64
        # (trixie t64 rename), add python3-bottle + smartmontools (trixie ships
        # smartmontools in main, no longer needs bookworm-backports). jsonschema
        # is provided via pip (see docker-base-trixie/pyproject.toml), matching
        # Make. iputils-ping is already declared in the swss-layer block above.
        "ipmitool",
        "librrd8t64",
        "rrdtool",
        "python3-smbus",
        "i2c-tools",
        "psmisc",
        "python3-netifaces",
        "python3-bottle",
        "libpci3",
        "nvme-cli",
        "xxd",
        "smartmontools",
        "dmidecode",
        "pciutils",
        "ethtool",

        # -------- docker-database runtime apt deps --------
        # docker-database/Dockerfile.j2 `apt install -y redis-tools redis-server`.
        # redis-tools is already registered above (base rootfs). redis-server is
        # NOT present in docker-config-engine-trixie base, so docker-database is
        # the first image to carry the redis-server files (daemon binary,
        # /etc/init.d + systemd units, default redis.conf). libprotobuf32t64 (the
        # runtime dep of libdashapi's protobuf) is already registered above.
        "redis-server",

        # -------- docker-snmp runtime apt deps --------
        # docker-snmp/Dockerfile.j2 `apt install -y ... snmp snmpd`. On trixie
        # snmp/snmpd come straight from Debian apt — rules/snmpd.mk only builds
        # them from source on bookworm (the whole SNMP/SNMPD/LIBSNMP block is
        # inside `ifeq ($(BLDENV),bookworm)`), so on trixie those Make vars are
        # empty and the packages are apt-sourced. libsnmp40t64 + libsnmp-base
        # are the runtime lib deps pulled in by snmp/snmpd. ipmitool is already
        # registered above (shared with docker-platform-monitor). python3-dev,
        # gcc, make are build-only (apt-purged in the Dockerfile) — not shipped.
        "snmp",
        "snmpd",
        "libsnmp40t64",
        "libsnmp-base",

        # -------- docker-router-advertiser runtime apt deps --------
        # docker-router-advertiser/Dockerfile.j2 line 19 `apt-get -y install radvd`.
        # Kept consistent with son629's Make (which actively apt-installs radvd),
        # unlike son624 bookworm which commented out the apt install and shipped a
        # locally-built radvd .deb via `@radvd//`. radvd is the IPv6 Router
        # Advertisement Daemon; it is not present in the docker-config-engine-trixie
        # base, so docker-router-advertiser is the first image to carry it.
        "radvd",

        # -------- docker-nat runtime apt deps --------
        # docker-nat/Dockerfile.j2 `apt install -f -y bridge-utils conntrack
        # iptables` (on trixie iptables comes from Debian repos, not local
        # builds). None are present in the docker-swss-layer-trixie base, so
        # docker-nat is the first image to carry them. flatten() does NOT resolve
        # Depends, so the transitive runtime deps `apt install` pulled in are
        # listed explicitly. Verified against the Make docker-nat image package
        # delta vs docker-swss-layer-trixie base (8 packages) PLUS libxtables12:
        #   bridge-utils, conntrack, iptables, libip4tc2, libip6tc2,
        #   libnetfilter-conntrack3, libnfnetlink0, libnftnl11, libxtables12.
        #   - iptables pulls libip4tc2, libip6tc2, libnftnl11, libxtables12.
        #   - conntrack pulls libnetfilter-conntrack3, libnfnetlink0.
        # libxtables12 provides libxtables.so.12 (linked by iptables'
        # xtables-nft-multi). In the Make image it arrives transitively via the
        # base iproute2, but the Bazel swss-layer base dropped it, so docker-nat
        # must ship it to keep iptables functional and match the Make final image.
        # Shared @trixie pool, same convention as the docker-database/-orchagent
        # runtime deps above.
        "bridge-utils",
        "conntrack",
        "iptables",
        "libip4tc2",
        "libip6tc2",
        "libnetfilter-conntrack3",
        "libnfnetlink0",
        "libnftnl11",
        "libxtables12",

        # -------- docker-sysmgr runtime apt deps --------
        # docker-sysmgr/Dockerfile.j2 `apt install -f -y libdbus-1-3
        # libdbus-c++-1-0v5`, then installs the sysmgr deb. The Bazel-built
        # rebootbackend + librebootgnoi pull a runtime closure that the
        # distroless config-engine-trixie base does not carry (flatten does not
        # resolve Depends). Packages added here provide the .so files the
        # binaries link:
        #   libdbus-c++-1-0v5      -> libdbus-c++-1.so.0 (Dockerfile apt install)
        #   libhiredis1.1.0        -> libhiredis.so.1.1.0 + libhiredis_ssl.so.1.1.0
        #                             (swsscommon dep; Make pulls it via apt too)
        #   libboost-serialization1.83.0 -> libboost_serialization.so.1.83.0
        #                             (swsscommon dep; Make pulls it via apt too)
        #   libpcre2-16-0/-32-0/-posix3 -> Bazel libyang3 links the full pcre2
        #                             suite; Make's libyang only pulls
        #                             libpcre2-8-0 (already in the base rootfs).
        # libdbus-1-3 is already in the base rootfs block. libnl-3/genl-3/nf-3/
        # route-3 and libprotobuf.so.29 are SONiC-built debs shipped from
        # @libnl3 and @sonic_build_infra//protobuf (see docker-sysmgr BUILD.bazel),
        # so they are NOT apt packages and are not listed here.
        "libdbus-c++-1-0v5",
        "libhiredis1.1.0",
        "libboost-serialization1.83.0",
        "libpcre2-16-0",
        "libpcre2-32-0",
        "libpcre2-posix3",

        # -------- docker-orchagent runtime apt deps --------
        # docker-orchagent/Dockerfile.j2 `apt install -y`: ifupdown arping
        # iproute2 ndisc6 tcpdump bridge-utils conntrack ndppd python3-protobuf
        # pciutils python3-netifaces. iproute2 is already in the debian base
        # rootfs; libpci3/pciutils/python3-netifaces are registered in the pmon
        # block above (shared @trixie pool). bridge-utils, conntrack,
        # libnetfilter-conntrack3 and libnfnetlink0 are already registered in the
        # docker-nat block above, so they are NOT repeated here. The remaining
        # explicit installs plus the transitive runtime deps `apt install` pulled
        # (which flatten() does NOT resolve, so each must be listed) are added
        # here. Transitives verified against the Make docker-orchagent image
        # package delta vs swss-layer base:
        #   libkmod2 (bridge-utils/ifupdown udev), libnet1 (ndisc6/ndppd),
        #   libpcap0.8t64 (tcpdump), pci.ids (pciutils data).
        # NOTE: the real "ifupdown" (Make ships 0.8.44+deb13u1) is dropped by the
        # hermetic rules_distroless apt resolver, so we use "ifupdown-ng" — the
        # drop-in replacement that provides the same ifup/ifdown/ifquery binaries
        # (same substitution the sonic-bazel bookworm reference made). Flagged as
        # a Make-vs-Bazel difference in the migration diff doc.
        "ifupdown-ng",
        "arping",
        "ndisc6",
        "tcpdump",
        "ndppd",
        "python3-protobuf",
        "libkmod2",
        "libnet1",
        "libpcap0.8t64",
        "pci.ids",

        # -------- Debug-only variant packages (rules/docker-base-trixie.mk _DBG_IMAGE_PACKAGES) --------
        # These are NOT baked into the base image (see BUILD.bazel `flat` list),
        # but registered here so the `debug-packages` flatten target can pull
        # them. Mirrors bookworm's split.
        "gdb",
        "gdbserver",
        "vim",
        "openssh-client",
        "sshpass",
        "strace",
    ],
    suites = [
        "trixie",
        "trixie-updates",
        "trixie-security",
    ],
)
apt.lock(
    into = "packages.lock",
)
use_repo(apt, "trixie")

# Hub name is "pip_pmon9". The aspect_rules_py uv extension marks itself
# reproducible=True (still true in 1.11.7), so Bazel caches its generated hub
# repo and does NOT re-evaluate it when only uv.lock's contents change. Each
# time the pip closure grows, the hub name must be bumped to force a fresh
# evaluation that reads the current uv.lock package closure.
# History: "pip" -> "pip_ce"/"pip_ce2" (config-engine + docker-database) ->
# "pip_pmon4"/"pip_pmon5" (docker-platform-monitor deps). A cross-branch merge
# left those names inconsistent (declared pip_pmon5 while pmon still referenced
# pip_pmon4 and docker-database referenced pip_ce2). Adding docker-snmp's pip
# deps (hiredis/python-arptable; smbus uses apt python3-smbus, not pip) bumped
# to "pip_pmon8". docker-orchagent then adds pyroute2==0.5.14 (sdist, wheel
# build-dep), growing the closure again, so the hub is bumped to "pip_pmon9"
# and unifies ALL consumers onto @pip_pmon9//<pkg>.
#
# Migrated to the aspect_rules_py 1.11.7 uv API: uv.project(pyproject, lock)
# replaces the old declare_venv + lockfile pair, and unstable_annotate_packages
# (keyed on lock) replaces unstable_annotate_requirements. The venv name that
# site_packages/py_venv targets select equals this project's [project].name
# ("docker-base-trixie").
uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pip_pmon9")
uv.project(
    hub_name = "pip_pmon9",
    pyproject = "//dockers/docker-base-trixie:pyproject.toml",
    lock = "//dockers/docker-base-trixie:uv.lock",
)

# Attach `wheel` as a build-dependency for sdist-only packages (bitarray on
# Python 3.13). The extension's default sdist build venv only has
# {setuptools, build}; this annotation adds `wheel` so bitarray's setuptools
# backend can build. See pip_annotations.toml for details.
uv.unstable_annotate_packages(
    lock = "//dockers/docker-base-trixie:uv.lock",
    src = "//dockers/docker-base-trixie:pip_annotations.toml",
)
use_repo(uv, "pip_pmon9")
